--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
 
-<title>Moje stránka</title>
+<title>Zdravé stravování</title>
 
 </head>
 
@@ -14,6 +14,8 @@
 
 <p>Toto je moje první stránka na GitHub Pages.</p>
 
+
+  
 </body>
 
 </html>
