--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <p>Zde se dovite vše o zdravé stravě</p>
 
-<img src=¨banany.jpg¨alt=¨Popis obrazku¨width=¨300¨>
+<img src="banany.jpg"alt="Popis obrazku"width="="300">
   
 </body>
 
