--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 
 <head>
 
-                                               <title>Zdravé stravování</title>
+<title>Zdravé stravování</title>
 
 </head>
 
-<body>
+<body>u
 
 <h1>Zdrave stravovaní</h1>
 
