--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <h1>Zdrave stravovaní</h1>
 
-<p>Zde se dovite vše o zdravé stravě</p>
+<p><u>Zde se dovite vše o zdravé stravě<u></p>
 
 <img src="banany.jpg"alt="Popis obrazku"width="="300">
   
